@@ -208,11 +208,13 @@ common.exception.notopic=Invalid or missing topic name.
 common.exception.novirtualwiki=Invalid or missing virtual wiki.
 common.exception.pseudotopic={0} is a special topic that cannot be viewed or edited as a normal topic.
 common.export=Export
+common.go=Go
 common.login=Login
 common.logout=Logout
 common.migrate=Migrate
 common.move=Move
 common.name=Name
+common.namespace=Namespace
 common.pagination.next=Next {0}
 common.pagination.previous=Previous {0}
 common.pagination.results=Results per page
