@@ -301,14 +301,18 @@ STATEMENT_SELECT_TOPIC_BY_TYPE = \
         DECLARE @VWIKI_ID int \
         DECLARE @TOPIC_TYPE1 int \
         DECLARE @TOPIC_TYPE2 int \
+        DECLARE @NAMESPACE_START int \
+        DECLARE @NAMESPACE_END int \
         DECLARE @SQL varchar(300) \
         SET @VWIKI_ID = ? \
         SET @TOPIC_TYPE1 = ? \
         SET @TOPIC_TYPE2 = ? \
+        SET @NAMESPACE_START = ? \
+        SET @NAMESPACE_END = ? \
         SET @LIMIT = ? \
         SET @OFFSET = ? \
         SET @TOP = @LIMIT \
-        SET @COUNT = (select count(*) from jam_topic where virtual_wiki_id = @VWIKI_ID and topic_type in (@TOPIC_TYPE1, @TOPIC_TYPE2) and delete_date is null) \
+        SET @COUNT = (select count(*) from jam_topic where virtual_wiki_id = @VWIKI_ID and topic_type in (@TOPIC_TYPE1, @TOPIC_TYPE2) and namespace_id >= NAMESPACE_START and namespace_id <= NAMESPACE_END and delete_date is null) \
         IF (@OFFSET > @COUNT) SET @OFFSET = @COUNT \
         IF (@COUNT < @OFFSET + @LIMIT) SET @TOP = @COUNT - @OFFSET \
         SET @SQL = 'select * from ( ' \
@@ -316,6 +320,8 @@ STATEMENT_SELECT_TOPIC_BY_TYPE = \
                       + 'select top '+CONVERT(VARCHAR, @OFFSET + @LIMIT)+' topic_name, topic_id ' \
                       + 'from jam_topic where virtual_wiki_id = '+CONVERT(VARCHAR, @VWIKI_ID) \
                       + ' and topic_type in ('+CONVERT(VARCHAR, @TOPIC_TYPE1)+','+CONVERT(VARCHAR, @TOPIC_TYPE2)+') ' \
+                      + ' and jam_topic.namespace_id >= '+CONVERT(VARCHAR, @NAMESPACE_START) \
+                      + ' and jam_topic.namespace_id <= '+CONVERT(VARCHAR, @NAMESPACE_END) \
                       + ' and delete_date is null ' \
                       + 'order by topic_name ' \
                    + ') a ' \
